# rust-demo-webcam-filter-wasm

./: Cargo.toml  package.json  vite.config.ts
page/: index.html
page/src/: index.ts
src/: lib.rs  main.rs
